--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (14.0.0-2) unstable; urgency=low
+
+  * Bug #46000: squid3 has been renamed to squid
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 25 Jan 2018 17:28:31 +0100
+
 ucs-school-webproxy (14.0.0-1) unstable; urgency=low
 
   * bumped version
