--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-56) unstable; urgency=low
+
+  * Bug #46017: cache test OUs to reduce test runtime
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 26 Jan 2018 13:43:35 +0100
+
 ucs-test-ucsschool (4.0.4-55) unstable; urgency=low
 
   * Bug #46017: cache test OUs to reduce test runtime
