--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-5) unstable; urgency=low
+
+  * Bug #46016: fix regressions in various tests
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 12 Feb 2018 16:20:14 +0100
+
 ucs-test-ucsschool (5.0.2-4) unstable; urgency=low
 
   * Bug #45990: fix 05_check_ucs_version
