--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-58) unstable; urgency=low
+
+  * Bug #46016: fix regressions in various tests
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 12 Feb 2018 16:20:14 +0100
+
 ucs-test-ucsschool (4.0.4-57) unstable; urgency=low
 
   * Bug #46016: reduce import jobs by 1/4th (batch 1)
