--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (13.0.1-2) unstable; urgency=low
+
+  * Bug #46290: give runsv time to recognize process state
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 15 Feb 2018 08:53:44 +0100
+
 ucs-school-webproxy (13.0.1-1) unstable; urgency=low
 
   * Bug #45352: a racing condition in the caching mechanism for handling
