--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-4) unstable; urgency=low
+
+  * Bug #45640: fix special chars count for length=3
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 16 Feb 2018 10:50:40 +0100
+
 ucs-school-lib (11.0.1-3) unstable; urgency=low
 
   * Bug #45640: safer handling of passwords with less than 4 chars
