--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-7) unstable; urgency=low
+
+  * Bug #45640: add test for password generation
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 16 Feb 2018 10:51:50 +0100
+
 ucs-test-ucsschool (5.0.2-6) unstable; urgency=low
 
   * Bug #44310: stabilize tests
