--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,12 @@
+ucs-school-import (16.0.1-2) unstable; urgency=low
+
+  * Bug #46317: run checks after pre_* hooks
+  * store users DN for unique attributes, so the same object can be checked
+    mutliple times, e.g. move(); modify()
+  * allow to remove an email address
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 16 Feb 2018 17:44:02 +0100
+
 ucs-school-import (16.0.1-1) unstable; urgency=medium
 
   * Bug #46175: adapt to API change of "disabled" property
