--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-62) unstable; urgency=low
+
+  * Bug #45640: create required attributes
+  * don't fail on slaves
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 19 Feb 2018 14:12:44 +0100
+
 ucs-test-ucsschool (4.0.4-61) unstable; urgency=low
 
   * Bug #46317: handle unset properties
