--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-3) unstable; urgency=low
+
+  * Bug #45640: rewrite self._unique_ids after school move
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 19 Feb 2018 14:16:15 +0100
+
 ucs-school-import (16.0.1-2) unstable; urgency=low
 
   * Bug #46317: run checks after pre_* hooks
