--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (5.0.2-9) unstable; urgency=low
+
+  * Bug #45640: create required attributes
+  * don't fail on slaves
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 19 Feb 2018 14:16:32 +0100
+
 ucs-test-ucsschool (5.0.2-8) unstable; urgency=low
 
   * Bug #46317: handle unset properties
