--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (13.0.1-3) unstable; urgency=low
+
+  * Bug #46290: raise timeout to 30s
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 19 Feb 2018 14:29:38 +0100
+
 ucs-school-webproxy (13.0.1-2) unstable; urgency=low
 
   * Bug #46290: give runsv time to recognize process state
