--- a/italc-windows/debian/changelog
+++ b/italc-windows/debian/changelog
@@ -1,6 +1,6 @@
 italc-windows (5.0.0-1) unstable; urgency=low
 
-  * bumped version
+  * Bug #45988: bumped version
 
  -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:01 +0100
 
