--- a/ucs-school-old-sharedirs/debian/changelog
+++ b/ucs-school-old-sharedirs/debian/changelog
@@ -1,6 +1,6 @@
 ucs-school-old-sharedirs (13.0.0-1) unstable; urgency=low
 
-  * bumped version
+  * Bug #45988: bumped version
 
  -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:47 +0100
 
