--- a/ucs-school-umc-groups/debian/changelog
+++ b/ucs-school-umc-groups/debian/changelog
@@ -1,6 +1,6 @@
 ucs-school-umc-groups (8.0.0-1) unstable; urgency=low
 
-  * bumped version
+  * Bug #45988: bumped version
 
  -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:48 +0100
 
