--- a/univention-management-console-module-selective-udm/debian/changelog
+++ b/univention-management-console-module-selective-udm/debian/changelog
@@ -1,6 +1,6 @@
 univention-management-console-module-selective-udm (7.0.0-1) unstable; urgency=medium
 
-  * bumped version
+  * Bug #45988: bumped version
 
  -- Daniel Troeder <troeder@univention.de>  Mon, 15 Jan 2018 13:17:22 +0100
 
