--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-63) unstable; urgency=low
+
+  * Bug #44310: fix ucsschool tests
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 21 Feb 2018 16:30:43 +0100
+
 ucs-test-ucsschool (4.0.4-62) unstable; urgency=low
 
   * Bug #45640: create required attributes
