--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-11) unstable; urgency=medium
+
+  * Bug #45640: set exposure to dangerous
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 21 Feb 2018 17:38:16 +0100
+
 ucs-test-ucsschool (5.0.2-10) unstable; urgency=low
 
   * Bug #44310: fix ucsschool tests
