--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-65) unstable; urgency=low
+
+  * Bug #44310: fix ucsschool test
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 23 Feb 2018 08:39:40 +0100
+
 ucs-test-ucsschool (4.0.4-64) unstable; urgency=medium
 
   * Bug #45640: set exposure to dangerous
