--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-12) unstable; urgency=low
+
+  * Bug #44310: fix ucsschool test
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 23 Feb 2018 08:41:22 +0100
+
 ucs-test-ucsschool (5.0.2-11) unstable; urgency=medium
 
   * Bug #45640: set exposure to dangerous
