--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.3-26) unstable; urgency=low
+
+  * Bug #46384: when available, attach input_data to ImportUser objects that
+    are to be deleted
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 23 Feb 2018 13:33:59 +0100
+
 ucs-school-import (15.0.3-25) unstable; urgency=low
 
   * Bug #45640: rewrite self._unique_ids after school move
