--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-66) unstable; urgency=low
+
+  * Bug #46017: do not use OU cache in 41_create_marktplatz_share
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 27 Feb 2018 17:32:43 +0100
+
 ucs-test-ucsschool (4.0.4-65) unstable; urgency=low
 
   * Bug #44310: fix ucsschool test
