--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-14) unstable; urgency=low
+
+  * Bug #46017: do not use OU cache in 41_create_marktplatz_share
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 27 Feb 2018 17:32:43 +0100
+
 ucs-test-ucsschool (5.0.2-13) unstable; urgency=low
 
   * Bug #46389: increase timeout of 23_password_reset
