--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (5.0.2-1) unstable; urgency=low
+
+  * Bug #46469: use "apt-get update" instead of package_manager.update()
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 02 Mar 2018 17:31:08 +0100
+
 ucs-school-umc-installer (5.0.1-1) unstable; urgency=medium
 
   * Bug #44089: adjust design to UCS 4.2
