--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (7.0.0-3) unstable; urgency=medium
+
+  * Bug #46428: rename files
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 06 Mar 2018 12:56:18 +0100
+
 ucs-school-radius-802.1x (7.0.0-2) unstable; urgency=medium
 
   * Bug #46428: adjust settings for freeradius 3
