--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-16) unstable; urgency=low
+
+  * Bug #46389: 23_password_reset: do not wait for staff users on edu slave
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 07 Mar 2018 17:25:29 +0100
+
 ucs-test-ucsschool (5.0.2-15) unstable; urgency=low
 
   * Bug #44310: fix tests
