--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (7.0.0-5) unstable; urgency=medium
+
+  *  Bug #46428: fix ssl path in postinst
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 08 Mar 2018 14:50:45 +0100
+
 ucs-school-radius-802.1x (7.0.0-4) unstable; urgency=medium
 
   * Bug #46428: path fixes; add ucr variables from univention-radius
