--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-import (16.0.1-5) unstable; urgency=low
+
+  * Bug #46533: fix name clashes with reverse accessor (adapt to Django 1.10)
+  * adapt to Stretch init script
+  * increase startup verbosity
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 08 Mar 2018 15:09:05 +0100
+
 ucs-school-import (16.0.1-4) unstable; urgency=low
 
   * Bug #46384: when available, attach input_data to ImportUser objects that
