--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-6) unstable; urgency=low
+
+  * Bug #46532: create systemd service unit for gunicorn
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 08 Mar 2018 18:34:12 +0100
+
 ucs-school-import (16.0.1-5) unstable; urgency=low
 
   * Bug #46533: fix name clashes with reverse accessor (adapt to Django 1.10)
