--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-9) unstable; urgency=low
+
+  * Bug #46532: fix restart of gunincorn service in join script
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 11 Mar 2018 22:47:55 +0100
+
 ucs-school-import (16.0.1-8) unstable; urgency=low
 
   * Bug #46532: fix restart of gunincorn service in postinst
