--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (15.0.1-6) unstable; urgency=low
+
+  * Bug #46710: fix problematic MIME filenames during upload
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 21 Mar 2018 11:46:46 +0100
+
 ucs-school-umc-distribution (15.0.1-5) unstable; urgency=low
 
   * Bug #45572: separate project distribution and collection directories
