--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.4-19) unstable; urgency=low
+
+  * Bug #46710: fix problematic MIME filenames during upload
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 21 Mar 2018 11:46:27 +0100
+
 ucs-school-umc-exam (7.0.4-18) unstable; urgency=low
 
   * Bug #46360: use FQDN to connect to UMC server
