--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-ldap-acls-master (15.0.0-10) unstable; urgency=medium
+
+  * Bug #45992: Allow read access to GPO list for all DC-Slaves
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 21 Mar 2018 15:10:29 +0100
+
 ucs-school-ldap-acls-master (15.0.0-9) unstable; urgency=low
 
   * Bug #41725
