--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-23) unstable; urgency=medium
+
+  * Bug #46439: add test for input_data in pyhooks in legacy inport
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 21 Mar 2018 17:10:57 +0100
+
 ucs-test-ucsschool (5.0.2-22) unstable; urgency=low
 
   * Bug #40727: wait in 74_radius_internetrules_priority for LDAP and S4 replication
