--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-26) unstable; urgency=low
+
+  * Bug #46710: fix c'n'p error in 101_exam_mode_filename_problems
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 23 Mar 2018 10:53:15 +0100
+
 ucs-test-ucsschool (5.0.2-25) unstable; urgency=medium
 
   * Bug #46462: add tests for CSV email field behavior and checks after
