--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.1-10) unstable; urgency=medium
+
+  * Bug #46572: do checks in dry-run, run them after pre-hooks and before
+    changes to the underlying UDM object
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 23 Mar 2018 14:09:47 +0100
+
 ucs-school-import (16.0.1-9) unstable; urgency=low
 
   * Bug #46532: fix restart of gunincorn service in join script
