--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.3-27) unstable; urgency=medium
+
+  * Bug #46572: do checks in dry-run, run them after pre-hooks and before
+    changes to the underlying UDM object
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 23 Mar 2018 14:22:15 +0100
+
 ucs-school-import (15.0.3-26) unstable; urgency=low
 
   * Bug #46384: when available, attach input_data to ImportUser objects that
