--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-30) unstable; urgency=medium
+
+  * Bug #46725: test gpo link replication
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 27 Mar 2018 11:03:54 +0200
+
 ucs-test-ucsschool (5.0.2-29) unstable; urgency=low
 
   * Bug #45379: verify setting of ucsschoolObjectType attribute
