--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-76) unstable; urgency=medium
+
+  * Bug #45992: test gpo link replication
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 27 Mar 2018 11:07:17 +0200
+
 ucs-test-ucsschool (4.0.4-75) unstable; urgency=medium
 
   * Bug #46572: handle existing mail/domain
