--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-31) unstable; urgency=medium
+
+  * Bug #46572: handle different names
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 27 Mar 2018 16:24:52 +0200
+
 ucs-test-ucsschool (5.0.2-30) unstable; urgency=medium
 
   * Bug #46725: test gpo link replication
