--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-77) unstable; urgency=medium
+
+  * Bug #46571: handle different names
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 27 Mar 2018 16:31:33 +0200
+
 ucs-test-ucsschool (4.0.4-76) unstable; urgency=medium
 
   * Bug #45992: test gpo link replication
@@ -6,7 +12,7 @@ ucs-test-ucsschool (4.0.4-76) unstable; urgency=medium
 
 ucs-test-ucsschool (4.0.4-75) unstable; urgency=medium
 
-  * Bug #46572: handle existing mail/domain
+  * Bug #46571: handle existing mail/domain
 
  -- Daniel Troeder <troeder@univention.de>  Fri, 23 Mar 2018 14:29:36 +0100
 
