--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-32) unstable; urgency=low
+
+  * Bug #45379: verify objectClass
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 28 Mar 2018 10:15:35 +0200
+
 ucs-test-ucsschool (5.0.2-31) unstable; urgency=medium
 
   * Bug #46572: handle different names
