--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-33) unstable; urgency=low
+
+  * Bug #45379: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 28 Mar 2018 15:16:56 +0200
+
 ucs-test-ucsschool (5.0.2-32) unstable; urgency=low
 
   * Bug #45379: verify objectClass
