--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-34) unstable; urgency=low
+
+  * Bug #42137: add tests for format dependency solver
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 28 Mar 2018 15:24:12 +0200
+
 ucs-test-ucsschool (5.0.2-33) unstable; urgency=low
 
   * Bug #45379: fix typo
