--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-78) unstable; urgency=low
+
+  * Bug #46754: add tests for format dependency solver
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 28 Mar 2018 15:32:29 +0200
+
 ucs-test-ucsschool (4.0.4-77) unstable; urgency=medium
 
   * Bug #46571: handle different names
