--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (6.0.1-4) unstable; urgency=low
+
+  * Bug #46756: use local LDAP server
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 28 Mar 2018 16:15:46 +0200
+
 ucs-school-radius-802.1x (6.0.1-3) unstable; urgency=low
 
   * Bug #45482: fix traceback if stationId is not specified as CLI argument
