--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-14) unstable; urgency=medium
+
+  * Bug #46572: change DN in uniqueness store also in dry-run
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 04 Apr 2018 13:09:10 +0200
+
 ucs-school-import (16.0.1-13) unstable; urgency=low
 
   * Bug #42137: add recursive dependency solver for formatting ImportUser
