--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (14.0.0-2) unstable; urgency=low
+
+  * Bug #46696: prevent locked DB by closing it after every use
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 04 Apr 2018 17:35:57 +0200
+
 ucs-school-netlogon-user-logonscripts (14.0.0-1) unstable; urgency=low
 
   * Bug #45988: bumped version
