--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-36) unstable; urgency=low
+
+  * Bug #46771: add fallback if installed ucsschool.lib is 4.3v1
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 04 Apr 2018 22:40:20 +0200
+
 ucs-test-ucsschool (5.0.2-35) unstable; urgency=medium
 
   * Bug #46572: modify classes in school change
