--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-15) unstable; urgency=medium
+
+  * Bug #45379: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 05 Apr 2018 09:28:54 +0200
+
 ucs-school-import (16.0.1-14) unstable; urgency=medium
 
   * Bug #46572: change DN in uniqueness store also in dry-run
