--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-38) unstable; urgency=low
+
+  * Bug #46771: revert fallback
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 05 Apr 2018 16:30:07 +0200
+
 ucs-test-ucsschool (5.0.2-37) unstable; urgency=low
 
   * Bug #42137: test no user is created or deleted in case of dependency
