--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-80) unstable; urgency=low
+
+  * Bug #46771: fixed correct number of squid reloads
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 06 Apr 2018 10:10:31 +0200
+
 ucs-test-ucsschool (4.0.4-79) unstable; urgency=medium
 
   * Bug #46571: modify classes in school change
