--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (5.0.2-37) unstable; urgency=low
+
+  * Bug #42137: test no user is created or deleted in case of dependency
+    recursion
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 06 Apr 2018 15:37:10 +0200
+
 ucs-test-ucsschool (5.0.2-36) unstable; urgency=low
 
   * Bug #46771: add fallback if installed ucsschool.lib is 4.3v1
