--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-31) unstable; urgency=low
+
+  * Bug #46754: raise exception instead of log warning
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 06 Apr 2018 15:43:56 +0200
+
 ucs-school-import (15.0.3-30) unstable; urgency=medium
 
   * Bug #46571: change DN in uniqueness store also in dry-run
