--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.1-19) unstable; urgency=low
+
+  * Bug #45379: ucsschoolObjectType is a multivalue property
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 09 Apr 2018 17:49:47 +0200
+
 ucs-school-import (16.0.1-18) unstable; urgency=low
 
   * Bug #46799: store cmdline user import summary and passwords in separate
