--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (5.0.2-39) unstable; urgency=low
+
+  * Bug #45379: ucsschoolObjectType is a UDM multi-value property
+  * change object type for TeachersAndStaff from teacher_and_staff to
+    ['staff', 'teacher']
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 10 Apr 2018 17:24:59 +0200
+
 ucs-test-ucsschool (5.0.2-38) unstable; urgency=low
 
   * Bug #46771: revert fallback
