--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-40) unstable; urgency=low
+
+  * Bug #42137: test formatting dependencies with and without UDM properties
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 11 Apr 2018 13:03:28 +0200
+
 ucs-test-ucsschool (5.0.2-39) unstable; urgency=low
 
   * Bug #45379: ucsschoolObjectType is a UDM multi-value property
