--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (7.0.0-8) unstable; urgency=low
+
+  * Bug #46806: make ucs-school-ntlm-auth case insensitive for usernames/hostnames
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 11 Apr 2018 13:06:32 +0200
+
 ucs-school-radius-802.1x (7.0.0-7) unstable; urgency=low
 
   * Bug #46531: use local LDAP server
