--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-41) unstable; urgency=low
+
+  * Bug #46806: check if radius authentication also works with camel case usernames/hostnames
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 11 Apr 2018 13:41:55 +0200
+
 ucs-test-ucsschool (5.0.2-40) unstable; urgency=low
 
   * Bug #42137: test formatting dependencies with and without UDM properties
