--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-83) unstable; urgency=low
+
+  * Bug #45684/#46806: check if radius authentication also works with camel case usernames/hostnames
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 11 Apr 2018 13:41:55 +0200
+
 ucs-test-ucsschool (4.0.4-82) unstable; urgency=low
 
   * Bug #46754: test formatting dependencies with and without UDM properties
