--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-34) unstable; urgency=low
+
+  * Bug #46800: don't change default for 'new_user_passwords' setting
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 11 Apr 2018 16:43:17 +0200
+
 ucs-school-import (15.0.3-33) unstable; urgency=low
 
   * Bug #46754: handle dependency resolution for UDM properties
