--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.1-23) unstable; urgency=low
+
+  * Bug #42137: query UDM for LDAP mapping without using LDAP and don't cache
+    result
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 11 Apr 2018 19:20:38 +0200
+
 ucs-school-import (16.0.1-22) unstable; urgency=low
 
   * Bug #46799: don't change default for 'new_user_passwords' setting
