--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-42) unstable; urgency=low
+
+  * Bug #46771: list installed UCS@school packages in 00_checks
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 12 Apr 2018 22:04:06 +0200
+
 ucs-test-ucsschool (5.0.2-41) unstable; urgency=low
 
   * Bug #46806: check if radius authentication also works with camel case usernames/hostnames
